# crossword-builder

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/: crossword-from-source.md
.claude/skills/crossword-from-source/: SKILL.md
.claude/skills/crossword-from-source/references/: clue-guidelines.md  output-formats.md
src/: __init__.py
src/crossword/: __init__.py  grid_generator.py  term_extractor.py
src/crossword/renderers/: __init__.py  _base.py  html_renderer.py  pdf_renderer.py  png_renderer.py
tests/: conftest.py  test_html_renderer.py  test_pdf_renderer.py  test_png_renderer.py  test_renderer_integration.py
